# read_from_s3

./: .gitignore  README.md  pyproject.toml  scripts.py  view_logs.py
read_from_s3/src/: handler.py  serverless.yml
read_from_s3/test/: handler_test.py  localstack_test.py
read_from_s3/test/files/: class.csv  event.json
read_from_s3/test/integration/: localstack_test.py
read_from_s3/test/unit/: handler_test.py
read_from_s3/test/utils/files/: class.csv  event.json
read_from_s3/test/utils/mock/: Client.py
