[tool.poetry]
name = "read_from_s3"
version = "0.1.0"
description = ""
authors = ["LucasFDutra <lucasfelipedutra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
boto3 = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
sls_deploy = "scripts:sls_deploy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
